[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
    "lang/ocpl/logger",
    "lang/ocpl/frozen-abi/macro",
    "lang/ocpl/frozen-abi",
    "lang/ocpl/atomic-u64",
    "lang/ocpl/decode-error",
    "lang/ocpl/define-syscall",
    "lang/ocpl/sanitize",
    "lang/ocpl/hash",
    "lang/ocpl/sha256-hasher",
    "lang/ocpl/pubkey",
    "lang/ocpl/instruction",
    "lang/ocpl/serialize-utils",
    "lang/ocpl/msg",
    "lang/ocpl/program-error",
    "lang/ocpl/program-memory",
    "lang/ocpl/account-info",
    "lang/ocpl/macro",
    "lang/ocpl/sysvar-id",
    "lang/ocpl/clock",
    "lang/ocpl/epoch-schedule",
    "lang/ocpl/fee-calculator",
    "lang/ocpl/last-restart-slot",
    "lang/ocpl/program-entrypoint",
    "lang/ocpl/rent",
    "lang/ocpl/slot-hashes",
    "lang/ocpl/slot-history",
    "lang/ocpl/bincode",
    "lang/ocpl/borsh",
    "lang/ocpl/stable-layout",
    "lang/ocpl/cpi",
    "lang/ocpl/native-token",
    "lang/ocpl/program-option",
    "lang/ocpl/program-pack",
    "lang/ocpl/secp256k1-recover",
    "lang/ocpl/short-vec",
    "lang/ocpl/serde-varint",
    "lang/ocpl/transaction-error",
    "lang/ocpl/program",
    "lang/ocpl/derivation-path",
    "lang/ocpl/signature",
    "lang/ocpl/curve25519",
    "lang/ocpl/account",
    "lang/ocpl/bn254",
    "lang/ocpl/feature-set",
    "lang/ocpl/packet",
    "lang/ocpl/precompile-error",
    "lang/ocpl/inflation",
    "lang/ocpl/ocp/secp256r1-program",
    "lang/ocpl/sdk",
    "ocios/zk-sdk",
    "ocios/zk-token-sdk",
    "ocios/compute-budget",
    "ocios/timings",
    "ocios/type-overrides",
    "ocios/log-collector",
    "ocios/measure",
    "ocios/metrics",
    "ocios/vote",
    "ocios/program-runtime",
    "ocios/poseidon",
    "ocios/ocp/vote",
    "ocios/ocp/zk-elgamal-proof",
    "ocios/ocp/zk-token-proof",
    "ocios/ocp/address-lookup-table",
    "ocios/ocp/bpf_loader",
    "ocios/ocp/compute-budget",
    "ocios/ocp/config",
    "ocios/ocp/loader-v4",
    "ocios/ocp/stake",
    "ocios/ocp/system",
    "ocios/version",
    "ocios/rayon-threadlimit",
    "ocios/lattice-hash",
    "ocios/inline-spl",
    "ocios/bucket_map",
    "ocios/svm-transaction",
    "ocios/accounts-db",
    "ocios/builtins-default-costs",
    "ocios/transaction-view",
    "ocios/runtime-transaction",
    "ocios/svm-rent-collector",
    "ocios/fee",
    "ocios/svm-conformance",
    "ocios/cost-model",
    "ocios/perf",
    "ocios/account-decoder-client-types",
    "ocios/account-decoder",
    "ocios/transaction-status-client-types",
    "ocios/transaction-status",
    "ocios/svm",
    "ocios/runtime",
    "consensus/merkle-tree",
    "consensus/entry",
    "consensus/storage-proto",
    "consensus/storage-bigtable",
    "consensus/ledger",
    "consensus/poh",
    "network/net-utils",
    "network/connection-cache",
    "network/rpc-client-api",
    "network/rpc-client",
    "network/remote-wallet",
    "network/clap-utils",
    "network/rpc-client-nonce-utils",
    "network/pubsub-client",
    "network/streamer",
    "network/transaction-metrics-tracker",
    "network/quic-client",
    "network/thin-client",
    "network/tpu-client",
    "network/udp-client",
    "network/client",
    "network/bloom",
    "network/gossip",
    "access/send-transaction-service",
    "access/cli-config",
    "access/faucet",
    "access/rpc",
    "access/geyser-plugin-interface",
    "access/geyser-plugin-manager",
    "access/turbine",
    "access/chain/unified-scheduler-logic",
    "access/chain/unified-scheduler-pool",
    "access/chain/wen-restart",
    "access/chain/core",
    "node/banks-client",
    "node/banks-interface",
    "node/banks-server",
    "node/program-test",
    "node/cli-output",
    "node/test-validator",
    "node/download-utils",
    "node/genesis-utils",
    "node/validator",
    "tool/tps-client",
    "tool/cli",
    "tool/genesis",
    "tool/clap-v3-utils",
    "tool/keygen",
    "tool/zk-keygen",
    "tool/local-cluster",
    "tool/bench-tps",
    "tool/dos",
    "tool/cargo-registry",
    "tool/tokens",
    "tool/ledger-tool",
    "tool/log-analyzer",
    "tool/net-shaper",
    "tool/stake-accounts",
    "tool/transaction-dos",
    "tool/upload-perf",
    "tool/notifier",
    "tool/watchtower",
    "tool/rbpf-cli",
    "bench/accounts-bench",
    "bench/accounts-cluster-bench",
    "bench/banking-bench",
    "bench/bench-streamer",
    "bench/merkle-root-bench",
    "bench/poh-bench",
]

resolver = "2"

[workspace.package]
version = "2.1.11"
authors = ["Bovey Maintainers <maintainers@solana.xyz>"]
repository = "https://github.com/nabob-labs/solana-spe"
homepage = "https://solana.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.dependencies]
# On Chain Program Language
solana-logger = { path = "lang/ocpl/logger", version = "=2.1.11" }
solana-frozen-abi-macro = { path = "lang/ocpl/frozen-abi/macro", version = "=2.1.11" }
solana-frozen-abi = { path = "lang/ocpl/frozen-abi", version = "=2.1.11" }
solana-atomic-u64 = { path = "lang/ocpl/atomic-u64", version = "=2.1.11" }
solana-decode-error = { path = "lang/ocpl/decode-error", version = "=2.1.11" }
solana-define-syscall = { path = "lang/ocpl/define-syscall", version = "=2.1.11" }
solana-sanitize = { path = "lang/ocpl/sanitize", version = "=2.1.11" }
solana-hash = { path = "lang/ocpl/hash", version = "=2.1.11", default-features = false }
solana-sha256-hasher = { path = "lang/ocpl/sha256-hasher", version = "=2.1.11" }
solana-pubkey = { path = "lang/ocpl/pubkey", version = "=2.1.11", default-features = false }
solana-instruction = { path = "lang/ocpl/instruction", version = "=2.1.11", default-features = false }
solana-serialize-utils = { path = "lang/ocpl/serialize-utils", version = "=2.1.11" }
solana-msg = { path = "lang/ocpl/msg", version = "=2.1.11" }
solana-program-error = { path = "lang/ocpl/program-error", version = "=2.1.11" }
solana-program-memory = { path = "lang/ocpl/program-memory", version = "=2.1.11" }
solana-account-info = { path = "lang/ocpl/account-info", version = "=2.1.11" }
solana-sdk-macro = { path = "lang/ocpl/macro", version = "=2.1.11" }
solana-sysvar-id = { path = "lang/ocpl/sysvar-id", version = "=2.1.11" }
solana-clock = { path = "lang/ocpl/clock", version = "=2.1.11" }
solana-epoch-schedule = { path = "lang/ocpl/epoch-schedule", version = "=2.1.11" }
solana-fee-calculator = { path = "lang/ocpl/fee-calculator", version = "=2.1.11" }
solana-last-restart-slot = { path = "lang/ocpl/last-restart-slot", version = "=2.1.11" }
solana-program-entrypoint = { path = "lang/ocpl/program-entrypoint", version = "=2.1.11" }
solana-rent = { path = "lang/ocpl/rent", version = "=2.1.11", default-features = false }
solana-slot-hashes = { path = "lang/ocpl/slot-hashes", version = "=2.1.11" }
solana-slot-history = { path = "lang/ocpl/slot-history", version = "=2.1.11" }
solana-bincode = { path = "lang/ocpl/bincode", version = "=2.1.11" }
solana-borsh = { path = "lang/ocpl/borsh", version = "=2.1.11" }
solana-stable-layout = { path = "lang/ocpl/stable-layout", version = "=2.1.11" }
solana-cpi = { path = "lang/ocpl/cpi", version = "=2.1.11" }
solana-native-token = { path = "lang/ocpl/native-token", version = "=2.1.11" }
solana-program-option = { path = "lang/ocpl/program-option", version = "=2.1.11" }
solana-program-pack = { path = "lang/ocpl/program-pack", version = "=2.1.11" }
solana-secp256k1-recover = { path = "lang/ocpl/secp256k1-recover", version = "=2.1.11", default-features = false }
solana-short-vec = { path = "lang/ocpl/short-vec", version = "=2.1.11" }
solana-serde-varint = { path = "lang/ocpl/serde-varint", version = "=2.1.11" }
solana-transaction-error = { path = "lang/ocpl/transaction-error", version = "=2.1.11" }
solana-program = { path = "lang/ocpl/program", version = "=2.1.11", default-features = false }
solana-derivation-path = { path = "lang/ocpl/derivation-path", version = "=2.1.11" }
solana-signature = { path = "lang/ocpl/signature", version = "=2.1.11", default-features = false }
solana-curve25519 = { path = "lang/ocpl/curve25519", version = "=2.1.11" }
solana-account = { path = "lang/ocpl/account", version = "=2.1.11" }
solana-bn254 = { path = "lang/ocpl/bn254", version = "=2.1.11" }
solana-feature-set = { path = "lang/ocpl/feature-set", version = "=2.1.11" }
solana-packet = { path = "lang/ocpl/packet", version = "=2.1.11" }
solana-precompile-error = { path = "lang/ocpl/precompile-error", version = "=2.1.11" }
solana-inflation = { path = "lang/ocpl/inflation", version = "=2.1.11" }
solana-secp256r1-program = { path = "lang/ocpl/ocp/secp256r1-program", version = "=2.1.11", default-features = false }
solana-sdk = { path = "lang/ocpl/sdk", version = "=2.1.11" }

# On Chain instruction OS
solana-zk-sdk = { path = "ocios/zk-sdk", version = "=2.1.11" }
solana-zk-token-sdk = { path = "ocios/zk-token-sdk", version = "=2.1.11" }
solana-compute-budget = { path = "ocios/compute-budget", version = "=2.1.11" }
solana-timings = { path = "ocios/timings", version = "=2.1.11" }
solana-type-overrides = { path = "ocios/type-overrides", version = "=2.1.11" }
solana-log-collector = { path = "ocios/log-collector", version = "=2.1.11" }
solana-measure = { path = "ocios/measure", version = "=2.1.11" }
solana-metrics = { path = "ocios/metrics", version = "=2.1.11" }
solana-vote = { path = "ocios/vote", version = "=2.1.11" }
solana-program-runtime = { path = "ocios/program-runtime", version = "=2.1.11" }
solana-poseidon = { path = "ocios/poseidon", version = "=2.1.11" }
solana-vote-program = { path = "ocios/ocp/vote", version = "=2.1.11" }
solana-zk-elgamal-proof-program = { path = "ocios/ocp/zk-elgamal-proof", version = "=2.1.11" }
solana-zk-token-proof-program = { path = "ocios/ocp/zk-token-proof", version = "=2.1.11" }
solana-address-lookup-table-program = { path = "ocios/ocp/address-lookup-table", version = "=2.1.11" }
solana-bpf-loader-program = { path = "ocios/ocp/bpf_loader", version = "=2.1.11" }
solana-compute-budget-program = { path = "ocios/ocp/compute-budget", version = "=2.1.11" }
solana-config-program = { path = "ocios/ocp/config", version = "=2.1.11" }
solana-loader-v4-program = { path = "ocios/ocp/loader-v4", version = "=2.1.11" }
solana-stake-program = { path = "ocios/ocp/stake", version = "=2.1.11" }
solana-system-program = { path = "ocios/ocp/system", version = "=2.1.11" }
solana-version = { path = "ocios/version", version = "=2.1.11" }
solana-rayon-threadlimit = { path = "ocios/rayon-threadlimit", version = "=2.1.11" }
solana-inline-spl = { path = "ocios/inline-spl", version = "=2.1.11" }
solana-lattice-hash = { path = "ocios/lattice-hash", version = "=2.1.11" }
solana-bucket-map = { path = "ocios/bucket_map", version = "=2.1.11" }
solana-svm-transaction = { path = "ocios/svm-transaction", version = "=2.1.11" }
solana-accounts-db = { path = "ocios/accounts-db", version = "=2.1.11" }
solana-builtins-default-costs = { path = "ocios/builtins-default-costs", version = "=2.1.11" }
agave-transaction-view = { path = "ocios/transaction-view", version = "=2.1.11" }
solana-runtime-transaction = { path = "ocios/runtime-transaction", version = "=2.1.11" }
solana-svm-rent-collector = { path = "ocios/svm-rent-collector", version = "=2.1.11" }
solana-fee = { path = "ocios/fee", version = "=2.1.11" }
solana-svm-conformance = { path = "ocios/svm-conformance", version = "=2.1.11" }
solana-cost-model = { path = "ocios/cost-model", version = "=2.1.11" }
solana-perf = { path = "ocios/perf", version = "=2.1.11" }
solana-account-decoder = { path = "ocios/account-decoder", version = "=2.1.11" }
solana-account-decoder-client-types = { path = "ocios/account-decoder-client-types", version = "=2.1.11" }
solana-transaction-status = { path = "ocios/transaction-status", version = "=2.1.11" }
solana-transaction-status-client-types = { path = "ocios/transaction-status-client-types", version = "=2.1.11" }
solana-svm = { path = "ocios/svm", version = "=2.1.11" }
solana-runtime = { path = "ocios/runtime", version = "=2.1.11" }

# Consensus
solana-merkle-tree = { path = "consensus/merkle-tree", version = "=2.1.11" }
solana-entry = { path = "consensus/entry", version = "=2.1.11" }
solana-storage-proto = { path = "consensus/storage-proto", version = "=2.1.11" }
solana-storage-bigtable = { path = "consensus/storage-bigtable", version = "=2.1.11" }
solana-ledger = { path = "consensus/ledger", version = "=2.1.11" }
solana-poh = { path = "consensus/poh", version = "=2.1.11" }

# Network
solana-net-utils = { path = "network/net-utils", version = "=2.1.11" }
solana-connection-cache = { path = "network/connection-cache", version = "=2.1.11", default-features = false }
solana-rpc-client-api = { path = "network/rpc-client-api", version = "=2.1.11" }
solana-rpc-client = { path = "network/rpc-client", version = "=2.1.11", default-features = false }
solana-remote-wallet = { path = "network/remote-wallet", version = "=2.1.11", default-features = false }
solana-clap-utils = { path = "network/clap-utils", version = "=2.1.11" }
solana-rpc-client-nonce-utils = { path = "network/rpc-client-nonce-utils", version = "=2.1.11" }
solana-pubsub-client = { path = "network/pubsub-client", version = "=2.1.11" }
solana-streamer = { path = "network/streamer", version = "=2.1.11" }
solana-transaction-metrics-tracker = { path = "network/transaction-metrics-tracker", version = "=2.1.11" }
solana-quic-client = { path = "network/quic-client", version = "=2.1.11" }
solana-thin-client = { path = "network/thin-client", version = "=2.1.11" }
solana-tpu-client = { path = "network/tpu-client", version = "=2.1.11", default-features = false }
solana-udp-client = { path = "network/udp-client", version = "=2.1.11" }
solana-client = { path = "network/client", version = "=2.1.11" }
solana-bloom = { path = "network/bloom", version = "=2.1.11" }
solana-gossip = { path = "network/gossip", version = "=2.1.11" }

# Access
solana-send-transaction-service = { path = "access/send-transaction-service", version = "=2.1.11" }
solana-cli-config = { path = "access/cli-config", version = "=2.1.11" }
solana-faucet = { path = "access/faucet", version = "=2.1.11" }
solana-rpc = { path = "access/rpc", version = "=2.1.11" }
agave-geyser-plugin-interface = { path = "access/geyser-plugin-interface", version = "=2.1.11" }
solana-geyser-plugin-manager = { path = "access/geyser-plugin-manager", version = "=2.1.11" }
solana-turbine = { path = "access/turbine", version = "=2.1.11" }
solana-unified-scheduler-logic = { path = "access/chain/unified-scheduler-logic", version = "=2.1.11" }
solana-unified-scheduler-pool = { path = "access/chain/unified-scheduler-pool", version = "=2.1.11" }
solana-wen-restart = { path = "access/chain/wen-restart", version = "=2.1.11" }
solana-core = { path = "access/chain/core", version = "=2.1.11" }

# Node
solana-banks-client = { path = "node/banks-client", version = "=2.1.11" }
solana-banks-interface = { path = "node/banks-interface", version = "=2.1.11" }
solana-banks-server = { path = "node/banks-server", version = "=2.1.11" }
solana-program-test = { path = "node/program-test", version = "=2.1.11" }
solana-cli-output = { path = "node/cli-output", version = "=2.1.11" }
solana-test-validator = { path = "node/test-validator", version = "=2.1.11" }
solana-download-utils = { path = "node/download-utils", version = "=2.1.11" }
solana-genesis-utils = { path = "node/genesis-utils", version = "=2.1.11" }
agave-validator = { path = "node/validator", version = "=2.1.11" }

# Tool
solana-tps-client = { path = "tool/tps-client", version = "=2.1.11" }
solana-cli = { path = "tool/cli", version = "=2.1.11" }
solana-genesis = { path = "tool/genesis", version = "=2.1.11" }
solana-clap-v3-utils = { path = "tool/clap-v3-utils", version = "=2.1.11" }
solana-keygen = { path = "tool/keygen", version = "=2.1.11" }
solana-zk-keygen = { path = "tool/zk-keygen", version = "=2.1.11" }
solana-local-cluster = { path = "tool/local-cluster", version = "=2.1.11" }
solana-bench-tps = { path = "tool/bench-tps", version = "=2.1.11" }
solana-dos = { path = "tool/dos", version = "=2.1.11" }
agave-cargo-registry = { path = "tool/cargo-registry", version = "=2.1.11" }
solana-tokens = { path = "tool/tokens", version = "=2.1.11" }
agave-ledger-tool = { path = "tool/ledger-tool", version = "=2.1.11" }
solana-log-analyzer = { path = "tool/log-analyzer", version = "=2.1.11" }
solana-net-shaper = { path = "tool/net-shaper", version = "=2.1.11" }
solana-stake-accounts = { path = "tool/stake-accounts", version = "=2.1.11" }
solana-transaction-dos = { path = "tool/transaction-dos", version = "=2.1.11" }
solana-upload-perf = { path = "tool/upload-perf", version = "=2.1.11" }
solana-notifier = { path = "tool/notifier", version = "=2.1.11" }
solana-watchtower = { path = "tool/watchtower", version = "=2.1.11" }
solana-rbpf-cli = { path = "tool/rbpf-cli", version = "=2.1.11" }

# Bench
solana-accounts-bench = { path = "bench/accounts-bench", version = "=2.1.11" }
solana-accounts-cluster-bench = { path = "bench/accounts-cluster-bench", version = "=2.1.11" }
solana-banking-bench = { path = "bench/banking-bench", version = "=2.1.11" }
solana-bench-streamer = { path = "bench/bench-streamer", version = "=2.1.11" }
solana-merkle-root-bench = { path = "bench/merkle-root-bench", version = "=2.1.11" }
solana-poh-bench = { path = "bench/poh-bench", version = "=2.1.11" }

solana-nohash-hasher = "0.2.1"
solana_rbpf = "=0.8.5"
spl-associated-token-account = "=4.0.0"
spl-instruction-padding = "0.2"
spl-memo = "=5.0.0"
spl-pod = "=0.3.0"
spl-token = "=6.0.0"
spl-token-2022 = "=4.0.0"
spl-token-group-interface = "=0.3.0"
spl-token-metadata-interface = "=0.4.0"

Inflector = "0.11.4"
aquamarine = "0.3.3"
aes-gcm-siv = "0.11.1"
ahash = "0.8.11"
anyhow = "1.0.91"
arbitrary = "1.3.2"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-lock = "3.4.0"
async-trait = "0.1.83"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.6.0" }
blake3 = "1.5.4"
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.8"
bytemuck = "1.19.0"
bytemuck_derive = "1.8.0"
byteorder = "1.5.0"
bytes = "1.8"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cfg_eval = "0.1.2"
chrono = { version = "0.4.38", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.15.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.33"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.13"
csv = "1.3.0"
ctrlc = "3.4.5"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derivative = "2.2.0"
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.31"
five8_const = "0.1.3"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
generic-array = { version = "0.14.7", default-features = false }
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
governor = "0.6.3"
hex = "0.4.3"
hidapi = { version = "2.6.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.0.1"
hyper = "0.14.31"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.13"
indexmap = "2.6.0"
indicatif = "0.17.8"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.72"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
lazy_static = "1.5.0"
libc = "0.2.161"
libloading = "0.7.4"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.22"
lru = "0.7.7"
lz4 = "1.28.0"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.29.0"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7.3"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.3.0"
proc-macro2 = "1.0.89"
proptest = "1.5"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.6"
quinn-proto = "0.11.9"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.11.27", default-features = false }
reqwest-middleware = "0.2.5"
rolling-file = "0.2.0"
rpassword = "7.3"
rustls = { version = "0.23.15", default-features = false }
scopeguard = "1.2.0"
semver = "1.0.23"
seqlock = "0.2.0"
serde = "1.0.213" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.213" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
shuttle = "0.7.1"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smallvec = "1.13.2"
smpl_jwt = "0.7.1"
socket2 = "0.5.7"
soketto = "0.7"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.42"
tarpc = "0.29.0"
tempfile = "3.13.0"
test-case = "3.3.1"
thiserror = "1.0.65"
tiny-bip39 = "0.8.2"
# Update solana-tokio patch below when updating this version
tokio = "1.43.0"
tokio-serde = "0.8"
tokio-stream = "0.1.16"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7"
toml = "0.8.12"
tonic = "0.9.2"
tonic-build = "0.9.2"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.2"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.7", default-features = false }
zstd = "0.13.2"

[patch.crates-io]
# for details, see https://github.com/anza-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }
# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "lang/ocpl/program", version = "=2.1.11" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
solana-curve25519 = { path = "lang/ocpl/curve25519" }
solana-program = { path = "lang/ocpl/program" }
solana-zk-sdk = { path = "ocios/zk-sdk" }
solana-zk-token-sdk = { path = "ocios/zk-token-sdk" }

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3